# DartsApp

./: .gitignore  README.md  config.py  darts_app.py  database.py  pyproject.toml  requirements.txt  tmp.txt
db/: database.py
gui/: constants.py
gui/pages/: best_worst.py  dashboard.py  plot_strategies.py  scoring.py  settings.py  statistics.py
gui/widgets/: custom_popup.py  menu.py
pages/: dashboard.py  scoring.py  settings.py  statistics.py
sql/: avg.sql  db_initialize.sql  nr_of_180s.sql  nr_of_darts.sql  nr_of_games.sql  nr_of_trebleless_visits.sql
