[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dartsapp"
version = "0.1.0"
description = "Darts scoring application with detailed statistics and visualizations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.1",
    "pandas==2.1.3",
    "scipy==1.11.4",
    "seaborn==0.13.0",
    "tkcalendar==1.6.1",
]

[project.scripts]
darts-app = "darts_app:main"
